--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,10 +1,11 @@
 {
+  "extends": "../tsconfig.base.json",
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
     "outDir": "dist",
-    "rootDir": "src",
     "strict": true,
     "esModuleInterop": true
-  }
+  },
+  "include": ["src/**/*.ts", "../schema/**/*.ts"]
 }
