--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -7,7 +7,7 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
-      "@schema/*": ["schema/*"]
+      "@vtt/shared/*": ["shared/*"]
     }
   }
 }
