--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "socket.io": "^4.8.1",
-    "@vtt/schema": "*"
+    "@vtt/shared": "*"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
