--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "socket.io-client": "^4.8.1",
-    "@vtt/schema": "*"
+    "@vtt/shared": "*"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
