--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vtt/shared": "*",
     "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "socket.io-client": "^4.8.1",
-    "@vtt/shared": "*"
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -21,7 +21,6 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/socket.io-client": "^1.4.36",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
     "tailwindcss": "^4",
